# uavgp_vision

./: .gitignore  CMakeLists.txt  ExposureTimeValueInfo.txt  ReadMe.md  ReadMe.txt  package.xml  终端运行输入指令.txt
OCR/0/: 000.pbm  001.pbm  002.pbm  003.pbm  004.pbm  005.pbm  007.pbm  008.pbm  010.pbm  011.pbm  012.pbm  013.pbm  014.pbm  015.pbm  016.pbm  017.pbm  018.pbm  019.pbm  020.pbm  021.pbm  022.pbm  023.pbm  024.pbm  025.pbm  026.pbm  027.pbm  028.pbm  029.pbm  030.pbm  031.pbm  032.pbm  034.pbm  035_.pbm  036.pbm  037.pbm  038.pbm  039.pbm  040.pbm  041.pbm  042.pbm  (+32 more)
OCR/1/: 100.pbm  101.pbm  102.pbm  103.pbm  104.pbm  105.pbm  106.pbm  107.pbm  108.pbm  109.pbm  110.pbm  111.pbm  112.pbm  113.pbm  114.pbm  115.pbm  116.pbm  117.pbm  118.pbm  119.pbm  120.pbm  121.pbm  122.pbm  123.pbm  124.pbm  125.pbm  126.pbm  127.pbm  128.pbm  129.pbm  130.pbm  131.pbm  132.pbm  133.pbm  134.pbm  135.pbm  136.pbm  137.pbm  138.pbm  139.pbm  (+59 more)
OCR/2/: 200.pbm  201.pbm  202.pbm  203.pbm  204.pbm  205.pbm  206.pbm  207.pbm  208.pbm  209.pbm  210.pbm  211.pbm  212.pbm  213.pbm  214.pbm  215.pbm  216.pbm  217.pbm  218.pbm  219.pbm  220.pbm  221.pbm  222.pbm  223.pbm  224.pbm  225.pbm  226.pbm  227.pbm  228.pbm  229.pbm  230.pbm  231.pbm  232.pbm  233.pbm  234.pbm  235.pbm  236.pbm  237.pbm  238.pbm  239.pbm  (+59 more)
OCR/3/: 300.pbm  301.pbm  302.pbm  303.pbm  304.pbm  305.pbm  306.pbm  307.pbm  308.pbm  309.pbm  310.pbm  311.pbm  312.pbm  313.pbm  314.pbm  315.pbm  316.pbm  317.pbm  318.pbm  319.pbm  320.pbm  321.pbm  322.pbm  323.pbm  324.pbm  325.pbm  326.pbm  327.pbm  328.pbm  329.pbm  330.pbm  331.pbm  332.pbm  333.pbm  334.pbm  335.pbm  336.pbm  337.pbm  338.pbm  339.pbm  (+60 more)
OCR/4/: 400.pbm  401.pbm  402.pbm  403.pbm  404.pbm  405.pbm  406.pbm  407.pbm  408.pbm  409.pbm  410.pbm  411.pbm  412.pbm  413.pbm  414.pbm  415.pbm  416.pbm  417.pbm  418.pbm  419.pbm  420.pbm  421.pbm  422.pbm  423_.pbm  424.pbm  425.pbm  426.pbm  427.pbm  428.pbm  429.pbm  430.pbm  431.pbm  432.pbm  433.pbm  434.pbm  435.pbm  436.pbm  437.pbm  438.pbm  439.pbm  (+59 more)
OCR/5/: 500.pbm  501.pbm  502.pbm  503.pbm  504.pbm  505.pbm  506.pbm  507.pbm  508.pbm  509.pbm  510.pbm  511.pbm  512.pbm  513.pbm  514.pbm  515.pbm  516.pbm  517.pbm  518.pbm  519.pbm  520.pbm  521.pbm  522.pbm  523.pbm  524.pbm  525.pbm  526.pbm  527.pbm  528.pbm  529.pbm  530.pbm  531.pbm  532.pbm  533.pbm  534.pbm  535.pbm  536.pbm  537.pbm  538.pbm  539.pbm  (+60 more)
OCR/6/: 600.pbm  601.pbm  602.pbm  603.pbm  604.pbm  605.pbm  606.pbm  607.pbm  608.pbm  610.pbm  611.pbm  612.pbm  613.pbm  614.pbm  615.pbm  616.pbm  617.pbm  618.pbm  619.pbm  620.pbm  621.pbm  622.pbm  623.pbm  624.pbm  625.pbm  626.pbm  627.pbm  628.pbm  629.pbm  630.pbm  631.pbm  632.pbm  634.pbm  635.pbm  636.pbm  637.pbm  638.pbm  639.pbm  640.pbm  641.pbm  (+56 more)
OCR/7/: 700.pbm  701.pbm  702.pbm  703.pbm  704.pbm  705.pbm  706.pbm  707.pbm  708.pbm  709.pbm  710.pbm  711.pbm  712.pbm  713.pbm  714.pbm  715.pbm  716.pbm  717.pbm  718.pbm  719.pbm  720.pbm  721.pbm  722.pbm  723.pbm  724.pbm  725.pbm  726.pbm  727.pbm  728.pbm  729.pbm  730.pbm  731.pbm  732.pbm  733.pbm  734.pbm  735.pbm  736.pbm  737.pbm  738.pbm  739.pbm  (+54 more)
OCR/8/: 800.pbm  801.pbm  802.pbm  803.pbm  804.pbm  805.pbm  806.pbm  807.pbm  808.pbm  809.pbm  810.pbm  811.pbm  812.pbm  813.pbm  814.pbm  815.pbm  816.pbm  817.pbm  818.pbm  819.pbm  820.pbm  821.pbm  822.pbm  823.pbm  824.pbm  825.pbm  826.pbm  827.pbm  828.pbm  829.pbm  830.pbm  831.pbm  832.pbm  833.pbm  834.pbm  835.pbm  836.pbm  837.pbm  838.pbm  839.pbm  (+60 more)
OCR/9/: 900.pbm  901.pbm  902.pbm  903.pbm  904.pbm  905.pbm  906.pbm  907.pbm  908.pbm  909.pbm  910.pbm  911.pbm  912.pbm  913.pbm  914.pbm  915.pbm  916.pbm  917.pbm  918.pbm  919.pbm  920.pbm  921.pbm  922.pbm  923.pbm  924.pbm  925.pbm  926.pbm  927.pbm  928.pbm  929.pbm  930.pbm  931.pbm  932.pbm  933.pbm  934.pbm  935.pbm  936.pbm  937.pbm  938.pbm  939.pbm  (+60 more)
cmake_config/: project_path_config.h.in
include/: CameraApi.h  DisplayScreenProcess.h  FlyCapture2.h  KNN_OCR.h  StereoMatching.h  declare.h  define.h  preprocessing.h
src/GuidanceCapture/: GuidanceNode.cpp  GuidanceNodeCalibration.cpp  GuidanceNodeTest.cpp
(+35 files in other folders)
